# serializer version: 1
# name: TestSessionsV2QueriesHogQLToClickhouse.test_join_with_events
  '''
  SELECT
      sessions.session_id AS session_id,
      uniq(events.uuid) AS uniq_uuid
  FROM
      events
      JOIN (SELECT
          toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
          raw_sessions.session_id_v7 AS session_id_v7
      FROM
          raw_sessions
      WHERE
          and(equals(raw_sessions.team_id, <TEAM_ID>), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_0)s, toIntervalDay(3))))
      GROUP BY
          raw_sessions.session_id_v7,
          raw_sessions.session_id_v7) AS sessions ON equals(events.`$session_id`, sessions.session_id)
  WHERE
      and(equals(events.team_id, <TEAM_ID>), greater(toTimeZone(events.timestamp, %(hogql_val_1)s), %(hogql_val_2)s))
  GROUP BY
      sessions.session_id
  LIMIT 50000
  '''
# ---
# name: TestSessionsV2QueriesHogQLToClickhouse.test_select_with_timestamp
  '''
  SELECT
      sessions.session_id AS session_id
  FROM
      (SELECT
          toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
          min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_0)s)) AS `$start_timestamp`,
          raw_sessions.session_id_v7 AS session_id_v7
      FROM
          raw_sessions
      WHERE
          and(equals(raw_sessions.team_id, <TEAM_ID>), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_1)s, toIntervalDay(3))))
      GROUP BY
          raw_sessions.session_id_v7,
          raw_sessions.session_id_v7) AS sessions
  WHERE
      ifNull(greater(sessions.`$start_timestamp`, %(hogql_val_2)s), 0)
  LIMIT 50000
  '''
# ---
# name: TestSessionsV2QueriesHogQLToClickhouse.test_session_breakdown
  '''
  SELECT
      count(DISTINCT e.`$session_id`) AS total,
      toStartOfDay(toTimeZone(e.timestamp, %(hogql_val_8)s)) AS day_start,
      multiIf(and(ifNull(greaterOrEquals(e__session.`$session_duration`, 2.0), 0), ifNull(less(e__session.`$session_duration`, 4.5), 0)), %(hogql_val_9)s, and(ifNull(greaterOrEquals(e__session.`$session_duration`, 4.5), 0), ifNull(less(e__session.`$session_duration`, 27.0), 0)), %(hogql_val_10)s, and(ifNull(greaterOrEquals(e__session.`$session_duration`, 27.0), 0), ifNull(less(e__session.`$session_duration`, 44.0), 0)), %(hogql_val_11)s, and(ifNull(greaterOrEquals(e__session.`$session_duration`, 44.0), 0), ifNull(less(e__session.`$session_duration`, 48.0), 0)), %(hogql_val_12)s, and(ifNull(greaterOrEquals(e__session.`$session_duration`, 48.0), 0), ifNull(less(e__session.`$session_duration`, 57.5), 0)), %(hogql_val_13)s, and(ifNull(greaterOrEquals(e__session.`$session_duration`, 57.5), 0), ifNull(less(e__session.`$session_duration`, 61.0), 0)), %(hogql_val_14)s, and(ifNull(greaterOrEquals(e__session.`$session_duration`, 61.0), 0), ifNull(less(e__session.`$session_duration`, 74.0), 0)), %(hogql_val_15)s, and(ifNull(greaterOrEquals(e__session.`$session_duration`, 74.0), 0), ifNull(less(e__session.`$session_duration`, 90.0), 0)), %(hogql_val_16)s, and(ifNull(greaterOrEquals(e__session.`$session_duration`, 90.0), 0), ifNull(less(e__session.`$session_duration`, 98.5), 0)), %(hogql_val_17)s, and(ifNull(greaterOrEquals(e__session.`$session_duration`, 98.5), 0), ifNull(less(e__session.`$session_duration`, 167.01), 0)), %(hogql_val_18)s, %(hogql_val_19)s) AS breakdown_value
  FROM
      events AS e
      LEFT OUTER JOIN (SELECT
          tupleElement(argMax(tuple(person_distinct_id_overrides.person_id), person_distinct_id_overrides.version), 1) AS person_id,
          person_distinct_id_overrides.distinct_id AS distinct_id
      FROM
          person_distinct_id_overrides
      WHERE
          equals(person_distinct_id_overrides.team_id, <TEAM_ID>)
      GROUP BY
          person_distinct_id_overrides.distinct_id
      HAVING
          ifNull(equals(tupleElement(argMax(tuple(person_distinct_id_overrides.is_deleted), person_distinct_id_overrides.version), 1), 0), 0)
      SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
      LEFT JOIN (SELECT
          dateDiff(%(hogql_val_0)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_1)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_2)s))) AS `$session_duration`,
          raw_sessions.session_id_v7 AS session_id_v7
      FROM
          raw_sessions
      WHERE
          and(equals(raw_sessions.team_id, <TEAM_ID>), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toStartOfDay(assumeNotNull(toDateTime(%(hogql_val_3)s, %(hogql_val_4)s))), toIntervalDay(3))), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(assumeNotNull(toDateTime(%(hogql_val_5)s, %(hogql_val_6)s)), toIntervalDay(3))))
      GROUP BY
          raw_sessions.session_id_v7,
          raw_sessions.session_id_v7) AS e__session ON equals(toUInt128(accurateCastOrNull(e.`$session_id`, %(hogql_val_7)s)), e__session.session_id_v7)
  WHERE
      and(equals(e.team_id, <TEAM_ID>), and(greaterOrEquals(toTimeZone(e.timestamp, %(hogql_val_20)s), toStartOfDay(assumeNotNull(toDateTime(%(hogql_val_21)s, %(hogql_val_22)s)))), lessOrEquals(toTimeZone(e.timestamp, %(hogql_val_23)s), assumeNotNull(toDateTime(%(hogql_val_24)s, %(hogql_val_25)s))), equals(e.event, %(hogql_val_26)s), in(if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id), (SELECT
                      cohortpeople.person_id AS person_id
                  FROM
                      cohortpeople
                  WHERE
                      and(equals(cohortpeople.team_id, <TEAM_ID>), and(equals(cohortpeople.cohort_id, 2), equals(cohortpeople.version, 0)))))))
  GROUP BY
      day_start,
      breakdown_value
  LIMIT 50000
  '''
# ---
# name: TestSessionsV2QueriesHogQLToClickhouse.test_session_replay_query
  '''
  SELECT
      s.session_id AS session_id,
      min(toTimeZone(s.min_first_timestamp, %(hogql_val_5)s)) AS start_time
  FROM
      session_replay_events AS s
      LEFT JOIN (SELECT
          path(nullIf(nullIf(argMinMerge(raw_sessions.entry_url), %(hogql_val_0)s), %(hogql_val_1)s)) AS `$entry_pathname`,
          raw_sessions.session_id_v7 AS session_id_v7
      FROM
          raw_sessions
      WHERE
          and(equals(raw_sessions.team_id, <TEAM_ID>), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_2)s, toIntervalDay(3))), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(now64(6, %(hogql_val_3)s), toIntervalDay(3))))
      GROUP BY
          raw_sessions.session_id_v7,
          raw_sessions.session_id_v7) AS s__session ON equals(toUInt128(accurateCastOrNull(s.session_id, %(hogql_val_4)s)), s__session.session_id_v7)
  WHERE
      and(equals(s.team_id, <TEAM_ID>), ifNull(equals(s__session.`$entry_pathname`, %(hogql_val_6)s), 0), greaterOrEquals(toTimeZone(s.min_first_timestamp, %(hogql_val_7)s), %(hogql_val_8)s), less(toTimeZone(s.min_first_timestamp, %(hogql_val_9)s), now64(6, %(hogql_val_10)s)))
  GROUP BY
      s.session_id
  LIMIT 50000
  '''
# ---
# name: TestSessionsV2QueriesHogQLToClickhouse.test_union
  '''
  SELECT
      0 AS duration
  LIMIT 50000
  UNION ALL
  SELECT
      events__session.`$session_duration` AS duration
  FROM
      events
      LEFT JOIN (SELECT
          dateDiff(%(hogql_val_0)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_1)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_2)s))) AS `$session_duration`,
          raw_sessions.session_id_v7 AS session_id_v7
      FROM
          raw_sessions
      WHERE
          and(equals(raw_sessions.team_id, <TEAM_ID>), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(today(), toIntervalDay(3))))
      GROUP BY
          raw_sessions.session_id_v7,
          raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_3)s)), events__session.session_id_v7)
  WHERE
      and(equals(events.team_id, <TEAM_ID>), less(toTimeZone(events.timestamp, %(hogql_val_4)s), today()))
  LIMIT 50000
  '''
# ---
# name: TestSessionsV2QueriesHogQLToClickhouse.test_urls_in_sessions_in_timestamp_query
  '''
  SELECT
      sessions.session_id AS session_id,
      sessions.`$urls` AS `$urls`,
      sessions.`$start_timestamp` AS `$start_timestamp`
  FROM
      (SELECT
          toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
          arrayDistinct(arrayFlatten(groupArray(raw_sessions.urls))) AS `$urls`,
          min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_0)s)) AS `$start_timestamp`,
          raw_sessions.session_id_v7 AS session_id_v7
      FROM
          raw_sessions
      WHERE
          and(equals(raw_sessions.team_id, <TEAM_ID>), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(minus(now64(6, %(hogql_val_1)s), toIntervalDay(7)), toIntervalDay(3))))
      GROUP BY
          raw_sessions.session_id_v7,
          raw_sessions.session_id_v7) AS sessions
  WHERE
      ifNull(greaterOrEquals(sessions.`$start_timestamp`, minus(now64(6, %(hogql_val_2)s), toIntervalDay(7))), 0)
  LIMIT 50000
  '''
# ---
